# depth_clustering

./: CMakeLists.txt  package.xml
examples/ros_nodes/: save_clusters_node.cpp  save_clusters_node.sh  show_objects_node.cpp  show_objects_node.sh
examples/simple_nodes/: CMakeLists.txt  show_objects_kitti.cpp  show_objects_moosmann.cpp  show_objects_moosmann1.cpp
launch/: test.launch
msg/: PointCloudArray.msg
src/clusterers/: image_based_clusterer.h
src/ground_removal/: depth_ground_remover.cpp  depth_ground_remover.h
src/image_labelers/: abstract_image_labeler.cpp  dijkstra_image_labeler.h
src/image_labelers/diff_helpers/: angle_diff.cpp  angle_diff.h
src/projections/: CMakeLists.txt  cloud_projection.cpp  cloud_projection.h  projection_params.cpp  ring_projection.h  spherical_projection.h
src/qt/: CMakeLists.txt
src/qt/drawables/: object_painter.h
src/qt/utils/: utils.cpp
src/qt/widgets/: opengl_folder_player.cpp
src/qt/widgets/ui/: opengl_folder_player.ui
src/ros_bridge/: cloud_odom_ros_subscriber.cpp
src/utils/: cloud.cpp  cloud.h  velodyne_utils.cpp
src/visualization/: visualizer.cpp  visualizer.h
test/: test_image_clusterer.cpp
